test git commit

--- a/ZookeeperTestPro/pom.xml
+++ b/ZookeeperTestPro/pom.xml
@@ -3,6 +3,9 @@
   <groupId>TestZookeeper</groupId>
   <artifactId>TestZookeeper</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+
+  <dependencies>
+  </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
     <resources>
